fix menu align

--- a/style.css
+++ b/style.css
@@ -21,14 +21,14 @@ a{color:#000;}
 #nav{position:fixed;height:100%;width:240px;background:#f6f7f2;text-transform:uppercase;color:000;font-size:12px;border-right:1px solid #ccc;}
 #nav ul{padding:10px 0;text-align:left;}
 #nav ul li{margin:15px 0;}
-#nav ul li a{display:block;padding:6px 4px 6px 15px;text-decoration:none;color:#000;font-weight:bold;}
+#nav ul li a{display:block;padding:6px 4px 6px 15px;text-decoration:none;color:#000;font-weight:bold;font-size:14px;letter-spacing:1px;}
 #nav ul li.on a{}
 #nav ul li ul{padding:0;}
 #nav ul li.on ul{display:block;}
-#nav ul li ul li a{border:0;padding:0;font-weight:normal;font-style:italic;}
+#nav ul li ul li a{border:0;padding:0;font-weight:normal;font-style:italic;font-size:12px;letter-spacing:0.5px;}
 #nav ul li ul li a:hover{border-color:yellow;}
 #nav ul li ul li{padding:0;margin:5px 0 5px 0;margin:0;}
-#nav ul li ul li a{display:block;padding:6px 0 6px 25px;border:0 none #eee;text-transform:none;}
+#nav ul li ul li a{display:block;padding:6px 0 6px 30px;border:0 none #eee;text-transform:none;}
 #nav ul li.on ul li.work a{background:none;color:#000;}
 /*#nav ul li a:hover{background:rgba(0,0,0,0.8);color:#fff;}*/
 #nav ul li.on ul li.work a:hover,
